--- a/alarm-module/platformio.ini
+++ b/alarm-module/platformio.ini
@@ -12,3 +12,11 @@
 platform = espressif32
 board = esp32cam
 framework = arduino
+lib_deps = 
+	espressif/esp32-camera@^2.0.0
+	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
+	ottowinter/ESPAsyncTCP-esphome@^1.2.3
+monitor_speed = 115200
+monitor_filters = direct, esp32_exception_decoder
+monitor_rts = 0
+monitor_dtr = 0
