--- a/alarm-module/pir-for-alarm/platformio.ini
+++ b/alarm-module/pir-for-alarm/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = mobizt/ESP Mail Client@^2.1.1
+lib_deps = 
+	mobizt/ESP Mail Client@^2.1.1
+	adafruit/Adafruit GFX Library@^1.10.14
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.9.2
+	lucadentella/SPIFFS ImageReader Library@^1.0.0
