--- a/alarm-module/platformio.ini
+++ b/alarm-module/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
 	espressif/esp32-camera@^2.0.0
 	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
 	ottowinter/ESPAsyncTCP-esphome@^1.2.3
+	mobizt/ESP Mail Client@^2.1.2
 monitor_speed = 115200
 monitor_filters = direct, esp32_exception_decoder
 monitor_rts = 0
