--- a/alarm-module/platformio.ini
+++ b/alarm-module/platformio.ini
@@ -17,7 +17,7 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
 	ottowinter/ESPAsyncTCP-esphome@^1.2.3
 	xreef/EMailSender@^2.4.3
-	dojyorin/Base64_Codec@^1.0.6
+	C:\Users\user\Downloads\ArduinoSort.zip
 monitor_speed = 115200
 monitor_filters = direct, esp32_exception_decoder
 monitor_rts = 0
