--- a/alarm-module/platformio.ini
+++ b/alarm-module/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
 	ottowinter/ESPAsyncTCP-esphome@^1.2.3
 	C:\Users\user\Downloads\ArduinoSort.zip
+	fbiego/ESP32Time@^1.0.4
 monitor_speed = 115200
 monitor_filters = direct, esp32_exception_decoder
 monitor_rts = 0
